# statements_ai_v7

./: .actrc  .gitignore  .mcp.json  .windsurfrules  ARCHITECTURE.md  CLAUDE.md  README.md  d3.config.md  docker-compose.yml  docs.md  fly.toml  package.json  render.yaml
bank-statements-api/: .coverage  .env  .env.test  .gitignore  Dockerfile  README.md  coverage.json  docker-compose.test.yml  fly.toml  pyproject.toml  pytest.ini  run.py  start_app.sh  test_categorization_fix.py  test_saved_filters_api.py
bank-statements-api/app/: app.py  db_init.py  main.py
bank-statements-api/app/adapters/: stripe.py
bank-statements-api/app/ai/: anthropic_ai.py  gemini_ai.py  groq_ai.py  llm_client.py  noop_llm.py  prompts.py
bank-statements-api/app/api/: schemas.py  transactions.py
bank-statements-api/app/common/: README.md  json_utils.py  text_normalization.py
bank-statements-api/app/core/: config.py  database.py  dependencies.py
bank-statements-api/app/logging/: config.py  dynamic_file_handler.py  utils.py
bank-statements-api/app/ports/: stripe.py
bank-statements-api/app/services/: account.py  auth.py  category.py  common.py  description_group.py  enhancement_rule_management.py  initial_balance_service.py  recurring_expense_analyzer.py  rule_based_categorization.py  rule_based_counterparty.py  source.py  statement.py  subscription.py  tag.py  transaction.py  transaction_categorization.py  transaction_categorization_management.py  transaction_counterparty_rule_management.py  transaction_counterparty_service.py  transaction_enhancement.py  transaction_processing_orchestrator.py  transaction_processing_orchestrator.py.bak  transaction_rule_enhancement.py
bank-statements-api/app/workers/: job_processor.py
bank-statements-api/docs/: dependency_injection.md
bank-statements-api/docs/features/: US_020_rule_based_categorization_implementation.md
bank-statements-api/migrations/: env.py
bank-statements-api/migrations/versions/: 068134e29474_remove_ai_job_types.py  07a4eb604119_redistribute_category_colors.py  158b37c81cc1_add_initial_balances_table.py  27a453245b7c_add_counterparty_account_id_to_.py  348432665689_add_enhancement_rules_table.py  4032ce98a1c9_add_background_jobs_table.py  4784ecf59876_add_counterparty_status_field_and_.py  5bb67df27e64_add_cascade_delete_constraint_for_.py  628b19f5990c_add_transaction_count_and_date_range_to_.py  7da2fd4b37ee_add_ai_counterparty_identification_job_.py  86d7516d9eff_rename_source_to_account.py  8de22f0bf3aa_add_categorization_confidence_to_.py  9465bd6edd1c_add_counterparty_status_to_transactions.py  990e449651d8_add_transaction_counterparty_rules_table.py  9d0e79cc879a_drop_old_rule_tables.py  a1b2c3d4e5f6_add_description_groups_tables.py  add_categories_table.py  add_file_type_to_uploaded_files.py  add_sources_table.py  add_statements_table.py  add_transaction_categorization_table.py  initial_migration.py  (+28 more)
bank-statements-api/scripts/: analyze_transactions.sh  categorize_transactions_batch.sh  example_script.py  fix_all.sh  load_categories.py  process_background_jobs.py  upload_accounts.sh  upload_categories.sh
bank-statements-api/tests/: README.md  conftest.py  mocks.py
(+582 files in other folders)
