[tool.poetry]
name = "bank-statements-api"
version = "0.1.0"
description = "API for Bank Statement Analyzer"
authors = ["Pedro SOusa <pedronsousa@gamil.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
alembic = "^1.10.3"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
httpx = "^0.28.1"
ruff = "^0.11.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 160