[tool.poetry]
name = "bank-statements-api"
version = "0.1.0"
description = "API for Bank Statement Analyzer"
authors = ["Pedro SOusa <pedronsousa@gamil.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
jsonfinder = "^0.4.2"
alembic = "^1.10.3"
fastapi = "^0.115.12"
google-genai = "^1.9.0"
google-generativeai = "^0.8.4"
httpx = "^0.28.1"
pandas = "^2.1.4"
psycopg2-binary = "^2.9.6"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python = "^3.9"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.20"
ruff = "^0.11.8"
sqlalchemy = "^2.0.9"
uvicorn = "^0.21.1"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 128
